--- a/indix.html
+++ b/indix.html
@@ -38,6 +38,9 @@ width:40px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     
 }
+ body {
+        background-color: rgb(255, 252, 252);
+      }
 .plan{
     gap: 15vw;
     margin-left: 30vw;
@@ -47,6 +50,88 @@ width:40px;
 }
 .div{
     /* margin-right: 10vw; */
+}
+.our{
+    margin-left: 45vw;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
+}   
+.card{
+  background-color:#F4F5F7;
+  border-radius: 5px;
+  height: 279px;
+  width: 198px;
+  margin-left: 90px;
+}
+.card img{
+  margin-left: 2px;
+  margin-top: 1px;
+  width: 195px;
+  height:185px ;
+}
+.contant{
+  font-size: 10px;
+  color: rgb(59, 38, 6);
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+.contant h1{
+  margin-top: 6px;
+}
+.contant div{
+  font-size: 20px;
+  margin-top: 3px;
+}
+.contant span{
+  font-size: 15px;
+  margin-bottom: 10px;
+}
+.sur{
+  margin-left: 17vw;
+  margin-top: 34px;
+}
+.long{
+  margin-left: 37vw;
+    margin-top: -18vw;
+}
+.pen{
+     background-color:#F4F5F7;
+  border-radius: 5px;
+  height: 277px;
+  width: 198px;
+}
+.book{
+   font-size: 10px;
+  color: rgb(59, 38, 6);
+  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+.book h1{
+font-size: 25px;
+  margin-bottom: 10px;
+}
+.book span{
+    font-size: 15px;
+  margin-bottom: 10px;
+}
+.book div{
+    font-size: 20px;
+  margin-top: 3px;
+}
+.pen img{
+  margin-left: 2px;
+  margin-top: 1px;
+  width: 195px;
+  height:185px ;
 }
 </style>
 <body>
@@ -70,8 +155,31 @@ width:40px;
     <div class="dev"> Living</div>
     <div class="div"> Bedroom</div>
    <div> Dinnig</div>
-   
-   
+</div>
+<div class="our">
+    <h2>Our Product</h2>
+</div>
+
+<div class="sur">
+<div class="card">
+  <img width="200px" src="pixc/Images (1).png" alt="">
+<div class="contant">
+  <h1>Respira</h1>
+  <span>out dor bar table and stone  </span>
+      <div>500.00</div>
+</div>
+</div>
+</div>
+<div class="long">
+<div class="pen">
+  <img width="200px" src="pixc/image 2.png" alt="">
+</div>
+<div class="book">
+<h1>sylthernine</h1>
+<span>style</span>
+<div>2500</div>
+
+</div>
 </div>
 </body>
 </html>
