--- a/indix.html
+++ b/indix.html
@@ -96,7 +96,7 @@ width:40px;
 }
 .long{
   margin-left: 37vw;
-    margin-top: -18vw;
+    margin-top: -18.30vw;
 }
 .pen{
      background-color:#F4F5F7;
@@ -114,24 +114,27 @@ width:40px;
   font-style: normal;
   font-variation-settings:
     "wdth" 100;
-}
+  }
 .book h1{
 font-size: 25px;
-  margin-bottom: 10px;
+  margin-top: -90px;
 }
 .book span{
-    font-size: 15px;
-  margin-bottom: 10px;
+     font-size: 15px;
+  margin-bottom: 10px; 
 }
 .book div{
     font-size: 20px;
-  margin-top: 3px;
+  margin-top: 3px; 
 }
 .pen img{
   margin-left: 2px;
   margin-top: 1px;
   width: 195px;
   height:185px ;
+}
+.book{
+  /* position: absolute; */
 }
 </style>
 <body>
@@ -176,8 +179,8 @@ font-size: 25px;
 </div>
 <div class="book">
 <h1>sylthernine</h1>
-<span>style</span>
-<div>2500</div>
+<span>stylish cafe chair</span>
+<div>2500.00</div>
 
 </div>
 </div>
