--- a/indix.html
+++ b/indix.html
@@ -80,7 +80,8 @@ width:40px;
     "wdth" 100;
 }
 .contant h1{
-  margin-top: 6px;
+  margin-top: 1px;
+  font-size: 20px;
 }
 .contant div{
   font-size: 20px;
@@ -88,7 +89,8 @@ width:40px;
 }
 .contant span{
   font-size: 15px;
-  margin-bottom: 10px;
+  margin-bottom:
+  /* margin-top: -45px; */
 }
 .sur{
   margin-left: 17vw;
@@ -105,11 +107,11 @@ width:40px;
   width: 198px;
 }
 .book{
-   font-size: 10px;
+  font-size: 10px;
   color: rgb(59, 38, 6);
   /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
   font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
+  font-optical-sizing: auto;ok
   font-weight: <weight>;
   font-style: normal;
   font-variation-settings:
@@ -135,6 +137,129 @@ font-size: 25px;
 }
 .book{
   /* position: absolute; */
+}
+.contanier{
+  
+  margin-top:-1.60vw;
+  color: rgb(59, 38, 6);
+  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;ok
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 80;
+}
+.contanier span{
+  margin-bottom: -4vw;
+  font-size: 18px;
+}
+.branch{
+    background-color:#F4F5F7;
+  border-radius: 5px;
+  height: 273px;
+  width: 198px;
+  margin-left: 51vw;
+  margin-top: -18vw;
+}
+.contanier h1{
+  font-size: 25px;
+}
+.contanier div{
+  font-size: 20px;
+}
+.you{
+  background-color:#F4F5F7;
+  border-radius: 5px;
+  height: 275px;
+  width: 198px;
+  margin-left: 65vw;
+  margin-top: -18vw;
+}
+.ok{
+  margin-top: -25px;
+  color: rgb(59, 38, 6);
+  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;ok
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 80;
+}
+.ok h1{
+  font-size: 23px;
+  margin-top: 1.50vw;
+  
+}
+.ok div{
+  font-size: 20px;
+}
+.anas button{
+  margin-left: 45vw;
+  margin-top: 50px;
+  width: 10vw;
+  height: 2vw;
+color:#B88E2F ;
+font-size: 15px;
+background-color:antiquewhite;
+border:burlywood;
+font-family:  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;ok
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 80;;
+}
+.class{
+  height: 400px;
+  width: 55vw;
+  background-color: rgb(237, 228, 218);
+  margin-top: 3vw;
+  margin-left: 22vw;
+}
+.g{
+  position: absolute;
+}
+.g div{
+  margin-left: 24vw;
+  margin-top: -20vw;
+  font-size: 30px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.g span{
+  margin-left: 24vw;
+  margin-top:30vw;
+  font-size:18px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.a{
+  margin-top: -25vw;
+  margin-left: 46vw;
+}
+.free{
+  margin-left: 61vw;
+  margin-top: -14vw;
+}
+.last{
+  margin-left: 73.50vw;
+  margin-top: -9vw;
+}
+.bali{
+  margin-left: 50vw;
+  margin-top: 3vw;
+}
+.gab button{
+ width: 16vw;
+ height: 4vw;
+ margin-left: 26vw;
+ background-color: #B88E2F;
+ border: none;
+ color: white;
+ margin-top: -9vw;
+position: absolute;
+font-size: 30px;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 </style>
 <body>
@@ -169,7 +294,7 @@ font-size: 25px;
 <div class="contant">
   <h1>Respira</h1>
   <span>out dor bar table and stone  </span>
-      <div>500.00</div>
+      <div><b>500.00</b></div>
 </div>
 </div>
 </div>
@@ -180,9 +305,59 @@ font-size: 25px;
 <div class="book">
 <h1>sylthernine</h1>
 <span>stylish cafe chair</span>
-<div>2500.00</div>
+<div><b>2500.00</b></div>
 
 </div>
 </div>
+<div class="branch">
+<div class="main">
+  <img width="200px" height="186px" src="pixc/image 3.png" alt="">
+</div>
+<div class="contanier">
+  <h1>Potty</h1>
+  <span>minimalist flover pot</span>
+  <div><b>RP 500.0</b></div>
+</div>
+</div>
+<div class="you">
+<div class="me">
+  <img width="200px" height="186px" src="pixc/Images.png" alt="">
+</div>
+<div class="ok">
+  <h1>Muggo</h1>
+  <span>Small</span>
+  <div><b>RP 300.00</b></div>
+</div>
+</div>
+<div class="anas">
+<button>SHOW MORE</button>
+</div>
+<div class="class">
+</div>
+<div class="g">
+<div class="bro">
+ <b>50+ Beautifull rooms</b> 
+</div>
+<span> <b>Designer already made a lot of Rooms</b></span>
+</div>
+<div class="ban">
+<div class="a">
+<img height="320px" src="pixc/1.png" alt="">
+</div>
+</div>
+<div class="free">
+  <img width="200px" src="pixc/2.png" alt="">
+</div>
+<div class="last">
+  <img width="60px" src="pixc/Group 13.png" alt="">
+</div>
+<div class="bali">
+  <img
+  height="20px"src="pixc/Indicator.png" alt="">
+</div>
+<div class="gab">
+  <button>Explore More</button>
+</div>
+
 </body>
 </html>
