--- a/indix.html
+++ b/indix.html
@@ -157,7 +157,7 @@ font-size: 25px;
 .branch{
     background-color:#F4F5F7;
   border-radius: 5px;
-  height: 273px;
+  height: 279px;
   width: 198px;
   margin-left: 51vw;
   margin-top: -18vw;
@@ -174,10 +174,10 @@ font-size: 25px;
   height: 275px;
   width: 198px;
   margin-left: 65vw;
-  margin-top: -18vw;
+  margin-top: -18.30vw;
 }
 .ok{
-  margin-top: -25px;
+  margin-top: -24px;
   color: rgb(59, 38, 6);
   /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
   font-family: "Open Sans", sans-serif;
@@ -259,6 +259,117 @@ font-family:  font-family: "Open Sans", sans-serif;
  margin-top: -9vw;
 position: absolute;
 font-size: 30px;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.rec{
+  margin-left: 46vw;
+  margin-top: 2vw;
+  font-size: 17px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.an{
+  margin-left: 44.10vw;
+}
+.an h2{
+  font-size: 29px;
+  margin-top:-1px;
+  width: 50px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.pic{
+  margin-left:22vw ;
+}
+.pic2{
+margin-left: 26.40vw;
+margin-top: -12.60vw;
+}
+.pic3{
+  margin-left: 45vw;
+  margin-top: -8vw;
+}
+.pic4{
+  margin-left: 22vw;
+  margin-top:-8vw;
+}
+.pic5{
+  margin-left:29.60vw;
+  margin-top: -13.30vw;
+}
+.pic6{
+  margin-left: 58vw;
+  margin-top: -23vw;
+}
+.pic7{
+  margin-left: 58vw;
+  margin-top:1vw;
+}
+.pic8{
+  margin-left: 67vw;
+  margin-top: -12vw;
+}
+.pic9{
+  margin-left:71.50vw;
+  margin-top: -34vw;
+}
+.pic9 img{
+  margin-top: 3vw;
+}.ed{
+  margin-top: 4vw;
+}
+.sepration{
+  height: 1px;
+  width: 64vw;
+  background-color: black;
+  margin-top: 15vw;
+  margin-left: 21vw;
+}
+.fun{
+  margin-left: 21vw;
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.link{
+  margin-left: 45vw;
+  margin-top: -3.60vw;
+  font-size: 20px;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #9F9F9F;
+}
+.help{
+  margin-left: 60vw;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-top: -1.60vw;
+  font-size: 20px;
+  color: #9F9F9F;
+}
+.new{
+  margin-left: 75vw;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  margin-top: -1.67vw;
+  color: #9F9F9F;
+}
+.uni{
+  margin-left: 21vw;
+  margin-top: 2vw;
+  font-size: 20px;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+color:#9F9F9F;
+}
+.fl{
+  margin-left: 21vw;
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #9F9F9F;
+  margin-top: 2vw;
+}
+.home ul li{
+  margin-left: 43.30vw;
+  margin-top: -3vw;
+}
+.game h1{
+margin-left: 59vw;
+font-size: 17px;
+margin-top: -6vw;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 </style>
@@ -358,6 +469,71 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 <div class="gab">
   <button>Explore More</button>
 </div>
-
-</body>
+<div class="ed">
+<div class="rec">
+  Share your setup with
+</div>
+<div class="an">
+<h2>#FuniroFurniture</h2>
+</div>
+</div>
+<div class="pic">
+  <img height="270px" src="pixc/Rectangle 36.png" alt="">
+</div>
+<div class="pic2">
+  <img height="190px" src="pixc/Rectangle 38.png" alt="">
+</div>
+<div class="pic3">
+  <img height="250px" src="pixc/Rectangle 40.png" alt="">
+</div>
+<div class="pic4">
+  <img height="200px" src="pixc/Rectangle 37.png" alt="">
+</div>
+<div class="pic5">
+  <img height="160px" src="pixc/Rectangle 39.png" alt="">
+</div>
+<div class="pic6">
+  <img height="190px" width="200px" src="pixc/Rectangle 43.png" alt="">
+</div>
+<div class="pic7">
+  <img height="180px" src="pixc/Rectangle 41.png" alt="">
+</div>
+<div class="pic8">
+  <img height="160px" src="pixc/Rectangle 44.png" alt="">
+</div>
+<div class="pic9">
+  <img height="290px" src="pixc/Rectangle 45.png" alt="">
+</div>
+<div class="sepration">
+</div>
+<div class="fun">
+  <h2>Funiro.</h2>
+</div>
+<div class="link">
+  Links
+</div>
+<div class="help">
+  Help
+</div>
+<div class="new">
+  Newslester
+</div>
+<div class="uni">
+  400 University Drives Sutes.
+</div>
+<div class="fl">
+  FL.33134 USA
+</div>
+<div class="home">
+  <ul>
+    <li>Contact</li>
+    <li>About</li>
+    <li>Shop</li>
+    <li>Home</li>
+    </ul>
+</div>
+<div class="game">
+  <h1>Payment Option</h1>
+</div>
+</body> 
 </html>
