--- a/indix.html
+++ b/indix.html
@@ -3,376 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<style>
-    .boox{
-        display: flex;
-        height: 20vw;
-        gap: 40px;
-        justify-content: center;
-        margin-top: 2vw;
-    }
-    .bro{
-        justify-content: center;
-        margin-left: 40vw;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        margin-top: 20px;
-    }
-.all{
-
-display: flex;
-height: 20VW;
-width:40px;
-}
-.thired{
-    margin-left:20vw;
-}
-.ssec{
-    display: flex;
-    margin-left: 13vw;
-}
-.hy{
-    margin-left: 31vw;
-    font-size: 15px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    
-}
-    body {
-        background-color: rgb(255, 252, 252);
-      }
-.plan{
-    gap: 15vw;
-    margin-left: 30vw;
-    display: flex;
-    margin-top: 5px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.div{
-    /* margin-right: 10vw; */
-}
-.our{
-    margin-left: 45vw;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    
-}   
-.card{
-  background-color:#F4F5F7;
-  border-radius: 5px;
-  height: 279px;
-  width: 198px;
-  margin-left: 90px;
-}
-.card img{
-  margin-left: 2px;
-  margin-top: 1px;
-  width: 195px;
-  height:185px ;
-}
-.contant{
-  font-size: 10px;
-  color: rgb(59, 38, 6);
-  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-}
-.contant h1{
-  margin-top: 1px;
-  font-size: 20px;
-}
-.contant div{
-  font-size: 20px;
-  margin-top: 3px;
-}
-.contant span{
-  font-size: 15px;
-  margin-bottom:
-  /* margin-top: -45px; */
-}
-.sur{
-  margin-left: 17vw;
-  margin-top: 34px;
-}
-.long{
-  margin-left: 37vw;
-    margin-top: -18.30vw;
-}
-.pen{
-      background-color:#F4F5F7;
-  border-radius: 5px;
-  height: 277px;
-  width: 198px;
-}
-.book{
-  font-size: 10px;
-  color: rgb(59, 38, 6);
-  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;ok
-  font-weight: <weight>;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-  }
-.book h1{
-font-size: 25px;
-  margin-top: -90px;
-}
-.book span{
-      font-size: 15px;
-  margin-bottom: 10px; 
-}
-.book div{
-    font-size: 20px;
-  margin-top: 3px; 
-}
-.pen img{
-  margin-left: 2px;
-  margin-top: 1px;
-  width: 195px;
-  height:185px ;
-}
-.book{
-  /* position: absolute; */
-}
-.contanier{
-  
-  margin-top:-1.60vw;
-  color: rgb(59, 38, 6);
-  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;ok
-  font-weight: <weight>;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 80;
-}
-.contanier span{
-  margin-bottom: -4vw;
-  font-size: 18px;
-}
-.branch{
-    background-color:#F4F5F7;
-  border-radius: 5px;
-  height: 279px;
-  width: 198px;
-  margin-left: 51vw;
-  margin-top: -18vw;
-}
-.contanier h1{
-  font-size: 25px;
-}
-.contanier div{
-  font-size: 20px;
-}
-.you{
-  background-color:#F4F5F7;
-  border-radius: 5px;
-  height: 275px;
-  width: 198px;
-  margin-left: 65vw;
-  margin-top: -18.30vw;
-}
-.ok{
-  margin-top: -24px;
-  color: rgb(59, 38, 6);
-  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;ok
-  font-weight: <weight>;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 80;
-}
-.ok h1{
-  font-size: 23px;
-  margin-top: 1.50vw;
-  
-}
-.ok div{
-  font-size: 20px;
-}
-.anas button{
-  margin-left: 45vw;
-  margin-top: 50px;
-  width: 10vw;
-  height: 2vw;
-color:#B88E2F ;
-font-size: 15px;
-background-color:antiquewhite;
-border:burlywood;
-font-family:  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;ok
-  font-weight: <weight>;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 80;;
-}
-.class{
-  height: 400px;
-  width: 55vw;
-  background-color: rgb(237, 228, 218);
-  margin-top: 3vw;
-  margin-left: 22vw;
-}
-.g{
-  position: absolute;
-}
-.g div{
-  margin-left: 24vw;
-  margin-top: -20vw;
-  font-size: 30px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.g span{
-  margin-left: 24vw;
-  margin-top:30vw;
-  font-size:18px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.a{
-  margin-top: -25vw;
-  margin-left: 46vw;
-}
-.free{
-  margin-left: 61vw;
-  margin-top: -14vw;
-}
-.last{
-  margin-left: 73.50vw;
-  margin-top: -9vw;
-}
-.bali{
-  margin-left: 50vw;
-  margin-top: 3vw;
-}
-.gab button{
-  width: 16vw;
-  height: 4vw;
-  margin-left: 26vw;
-  background-color: #B88E2F;
-  border: none;
-  color: white;
-  margin-top: -9vw;
-position: absolute;
-font-size: 30px;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.rec{
-  margin-left: 46vw;
-  margin-top: 2vw;
-  font-size: 17px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.an{
-  margin-left: 44.10vw;
-}
-.an h2{
-  font-size: 29px;
-  margin-top:-1px;
-  width: 50px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.pic{
-  margin-left:22vw ;
-}
-.pic2{
-margin-left: 26.40vw;
-margin-top: -12.60vw;
-}
-.pic3{
-  margin-left: 45vw;
-  margin-top: -8vw;
-}
-.pic4{
-  margin-left: 22vw;
-  margin-top:-8vw;
-}
-.pic5{
-  margin-left:29.60vw;
-  margin-top: -13.30vw;
-}
-.pic6{
-  margin-left: 58vw;
-  margin-top: -23vw;
-}
-.pic7{
-  margin-left: 58vw;
-  margin-top:1vw;
-}
-.pic8{
-  margin-left: 67vw;
-  margin-top: -12vw;
-}
-.pic9{
-  margin-left:71.50vw;
-  margin-top: -34vw;
-}
-.pic9 img{
-  margin-top: 3vw;
-}.ed{
-  margin-top: 4vw;
-}
-.sepration{
-  height: 1px;
-  width: 64vw;
-  background-color: black;
-  margin-top: 15vw;
-  margin-left: 21vw;
-}
-.fun{
-  margin-left: 21vw;
-  font-size: 20px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.link{
-  margin-left: 45vw;
-  margin-top: -3.60vw;
-  font-size: 20px;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #9F9F9F;
-}
-.help{
-  margin-left: 60vw;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin-top: -1.60vw;
-  font-size: 20px;
-  color: #9F9F9F;
-}
-.new{
-  margin-left: 75vw;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 20px;
-  margin-top: -1.67vw;
-  color: #9F9F9F;
-}
-.uni{
-  margin-left: 21vw;
-  margin-top: 2vw;
-  font-size: 20px;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-color:#9F9F9F;
-}
-.fl{
-  margin-left: 21vw;
-  font-size: 20px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #9F9F9F;
-  margin-top: 2vw;
-}
-.home ul li{
-  margin-left: 43.30vw;
-  margin-top: -3vw;
-}
-.game h1{
-margin-left: 59vw;
-font-size: 17px;
-margin-top: -6vw;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-</style>
 <body>
     <div class="bro">
         <h2>Browse The Range</h2>
@@ -533,5 +166,17 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 <div class="game">
     <h1>Payment Option</h1>
 </div>
+<div class="return">
+   <h1>Return</h1> 
+</div>
+<div class="privacy">
+    <h1>Privacy Policies</h1>
+</div>
+<div class="email">
+    Enter Your Email Adress
+</div>
+<div class="sep">
+</div>
+<a class="atag" href="home.html">ABOUT US</a>
 </body> 
 </html>
