--- a/indix.html
+++ b/indix.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>ABOUT US</title>
 </head>
 <body>
     <div class="bro">
@@ -124,17 +124,18 @@
     <img height="160px" src="pixc/Rectangle 39.png" alt="">
 </div>
 <div class="pic6">
-    <img height="190px" width="200px" src="pixc/Rectangle 43.png" alt="">
+    <img width="210px" src="pixc/Mask Group (2).png" alt="">
 </div>
 <div class="pic7">
     <img height="180px" src="pixc/Rectangle 41.png" alt="">
 </div>
 <div class="pic8">
-    <img height="160px" src="pixc/Rectangle 44.png" alt="">
+    <img width="160px" src="pixc/Mask Group.png" alt="">
 </div>
 <div class="pic9">
-    <img height="290px" src="pixc/Rectangle 45.png" alt="">
+    <img src="pixc/Rectangle 37.png" alt="">
 </div>
+
 <div class="sepration">
 </div>
 <div class="fun">
@@ -177,6 +178,6 @@
 </div>
 <div class="sep">
 </div>
-<a class="atag" href="home.html">ABOUT US</a>
+
 </body> 
 </html>
