--- a/contact.html
+++ b/contact.html
@@ -162,10 +162,10 @@ margin-left: 10vw;
     margin-left:38vw ;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top:-2.80vw;
+    color: #9F9F9F;
 }
 .gro{
     margin-left: 10vw;
-    
     margin-top: 2vw;
 }
 .group ul{
@@ -176,6 +176,166 @@ margin-left: 10vw;
     height: 2px;
 background-color: #9F9F9F; 
 margin-left: 10.60vw;
+}
+.rel h2{
+    margin-left:37.50vw ;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+.baln{
+    width: 200px;
+    height: 325px;
+    background-color: #9F9F9F;
+    margin-left: 20vw;
+}
+.baln2{
+ width: 200px;
+    height: 320px;
+    background-color: #9F9F9F;
+    margin-left: 36.75vw;
+    margin-top: -20.50vw;
+}
+.baln3{
+     width: 200px;
+    height: 320px;
+    background-color: #9F9F9F;
+    margin-left: 53.55vw;
+    margin-top: -20.50vw;
+}.image{
+    margin-top: -21.70vw;
+    margin-left: 20vw;
+}
+.image2{
+    margin-left: 3.49vw;
+    margin-top: ;
+}
+.image3{
+    margin-left: 3.49vw;
+    margin-top: -10vw;
+}
+.contan{
+    margin-left: 20vw;
+    margin-top: -1.90vw;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.contan span{
+    font-size: 20px;
+}
+.contan h1{
+    font-size: 20px;
+}
+.hel{
+    margin-left: 37vw;
+    margin-top: -9vw;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+}
+.hel h2{
+    font-size: 24px;
+}
+.hel span{
+    font-size: 20px;
+    margin-top: -3px;
+}
+.hel h1{
+    font-size: 20px;
+}
+.hello{
+    margin-left: 54vw;
+    margin-top: -8.90vw;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.hello span{
+    font-size: 20px;
+}
+.hello h1{
+    font-size: 20px;
+}
+.sh img{
+    margin-left: 37vw;
+    margin-top: 1vw;
+}
+.sepratiom{
+        width: 1040px;
+    height: 2px;
+background-color: #9F9F9F; 
+margin-left: 10.60vw;
+margin-top: 1vw;
+}
+
+.fun{
+  margin-left: 15vw;
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.link{
+  margin-left: 35vw;
+  margin-top: -3.60vw;
+  font-size: 20px;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #9F9F9F;
+}
+.help{
+  margin-left: 50vw;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-top: -1.60vw;
+  font-size: 20px;
+  color: #9F9F9F;
+}
+.new{
+  margin-left: 65vw;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  margin-top: -1.67vw;
+  color: #9F9F9F;
+}
+.uni{
+  margin-left: 15vw;
+  margin-top: 2vw;
+  font-size: 20px;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+color:#9F9F9F;
+}
+.fl{
+  margin-left: 15vw;
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #9F9F9F;
+  margin-top: 2vw;
+}
+.home ul li{
+  margin-left: 19.30vw;
+  margin-top: -3.50vw;
+  color: black;
+}
+.game h1{
+margin-left: 50vw;
+font-size: 17px;
+margin-top: -6vw;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.return h1{
+    margin-left: 50vw;
+    font-size: 19px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.privacy h1{
+    margin-left:50vw ;
+    font-size: 19px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.email{
+    margin-left: 65vw;
+    margin-top: -7vw;
+    color: #9F9F9F;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+}
+.sep{
+     height: 1px;
+  width: 15vw;
+  background-color: black;
+  margin-top: 1px;
+  margin-left: 65vw;
 }
   </style>
   <body>
@@ -286,5 +446,81 @@ margin-left: 10.60vw;
         </ul>
     </nav>
     <div class="sepration3"></div>
+<div class="rel">
+<h2>Related Product</h2>
+</div>
+<div class="baln">
+</div>
+<div class="baln2">
+</div>
+<div class="baln3">
+</div>
+<nav class="image">
+    <img width="200px" src="pixc/Images (1).png" alt="">
+    <img class="image2" width="200px" src="pixc/image 2.png" alt="">
+    <img class="image3" width="200px" src="pixc/image 3.png" alt="">
+</nav>
+<div class="contan">
+     <h2>Respira</h2>
+     <span>Stylish</span>
+     <h1>500.00</h1>
+</div>
+<div class="hel">
+    <h2>
+        Potty
+    </h2>
+    <span>Small</span>
+    <h1>2500.00</h1>
+</div>
+<div class="hello">
+    <h2>Muggo</h2>
+    <span>style</span>
+    <h1>300.00</h1>
+</div>
+<div class="sh">
+    <img width="190px" src="pixc/Show more.png" alt="">
+</div>
+<div class="sepratiom"></div>
+
+<div class="fun">
+    <h2>Funiro.</h2>
+</div>
+<div class="link">
+    Links
+</div>
+<div class="help">
+    Help
+</div>
+<div class="new">
+    Newslester
+</div>
+<div class="uni">
+    400 University Drives Sutes.
+</div>
+<div class="fl">
+    FL.33134 USA
+</div>
+<div class="home">
+    <ul>
+        <li>Contact</li>
+        <li>About</li>
+        <li>Shop</li>
+        <li>Home</li>
+        </ul>
+</div>
+<div class="game">
+    <h1>Payment Option</h1>
+</div>
+<div class="return">
+   <h1>Return</h1> 
+</div>
+<div class="privacy">
+    <h1>Privacy Policies</h1>
+</div>
+<div class="email">
+    Enter Your Email Adress
+</div>
+<div class="sep">
+</div>
   </body>
 </html>
