--- a/maincontact.html
+++ b/maincontact.html
@@ -39,8 +39,103 @@
     margin-left: 38.60vw;
 }
 .div{
-    margin-left: 10vw;
+    margin-left: 11vw;
     margin-top: 4vw;
+}
+.blank{
+    width: 960px;
+    height: 120px;
+    background-color: antiquewhite;
+    margin-left: 10vw;
+}
+.hy{
+    margin-top: -5vw;
+    margin-left: 15vw;
+    display: flex;
+    gap: 40px;
+}
+.fil{
+    width: 960px;
+    height: 2px;
+    background-color: gray;
+    margin-top: 2vw;
+    margin-left: 10vw;
+}
+
+.fun{
+  margin-left: 15vw;
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.link{
+  margin-left: 35vw;
+  margin-top: -3.60vw;
+  font-size: 20px;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #9F9F9F;
+}
+.help{
+  margin-left: 50vw;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-top: -1.60vw;
+  font-size: 20px;
+  color: #9F9F9F;
+}
+.new{
+  margin-left: 65vw;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  margin-top: -1.67vw;
+  color: #9F9F9F;
+}
+.uni{
+  margin-left: 15vw;
+  margin-top: 2vw;
+  font-size: 20px;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+color:#9F9F9F;
+}
+.fl{
+  margin-left: 15vw;
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #9F9F9F;
+  margin-top: 2vw;
+}
+.home ul li{
+  margin-left: 33.30vw;
+  margin-top: -2.90vw;
+  color: black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.game h1{
+margin-left: 50vw;
+font-size: 17px;
+margin-top: -6vw;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.return h1{
+    margin-left: 50vw;
+    font-size: 19px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.privacy h1{
+    margin-left:50vw ;
+    font-size: 19px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.email{
+    margin-left: 65vw;
+    margin-top: -7vw;
+    color: #9F9F9F;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+}
+.sep{
+     height: 1px;
+  width: 15vw;
+  background-color: black;
+  margin-top: 1px;
+  margin-left: 65vw;
 }
 </style>
 <body>
@@ -70,5 +165,54 @@
    <div class="div">
     <img width="900px" src="pixc/Group 162.png" alt="">
    </div>
+   <div class="blank"></div>
+   <div class="hy">
+    <img width="200px" src="pixc/Frame 2.png" alt="">
+    <img width="130px" src="pixc/Frame 4.png" alt="">
+    <img width="150px" src="pixc/Frame 5.png" alt="">
+    <img width="150px" src="pixc/Frame 156.png" alt="">
+   </div>
+   <div class="fil">
+   </div>
+   <div class="fun">
+    <h2>Funiro.</h2>
+</div>
+<div class="link">
+    Links
+</div>
+<div class="help">
+    Help
+</div>
+<div class="new">
+    Newslester
+</div>
+<div class="uni">
+    400 University Drives Sutes.
+</div>
+<div class="fl">
+    FL.33134 USA
+</div>
+<div class="home">
+    <ul>
+        <li>Contact</li>
+        <li>About</li>
+        <li>Shop</li>
+        <li>Home</li>
+        </ul>
+</div>
+<div class="game">
+    <h1>Payment Option</h1>
+</div>
+<div class="return">
+   <h1>Return</h1> 
+</div>
+<div class="privacy">
+    <h1>Privacy Policies</h1>
+</div>
+<div class="email">
+    Enter Your Email Adress
+</div>
+<div class="sep">
+</div>
 </body>
 </html>
