--- a/home.html
+++ b/home.html
@@ -141,6 +141,6 @@ font-size: 22px;
 
 <div class="shop3">  <a href="indix.html">ABOUT US</a></div>
 <div class="shop4">
-    <a href="contact.html">CONTACT</a>
+    <a href="maincontact.html">CONTACT</a>
 </body>
 </html>
