--- a/maincontact.html
+++ b/maincontact.html
@@ -81,7 +81,7 @@
   color: #9F9F9F;
 }
 .new{
-  margin-left: 65vw;
+  margin-left: 63vw;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 20px;
   margin-top: -1.67vw;
@@ -124,7 +124,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .email{
-    margin-left: 65vw;
+    margin-left: 63vw;
     margin-top: -7vw;
     color: #9F9F9F;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -135,7 +135,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   width: 15vw;
   background-color: black;
   margin-top: 1px;
-  margin-left: 65vw;
+  margin-left: 63vw;
 }
 </style>
 <body>
@@ -145,7 +145,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     <a href="home.html">HOME</a>
     <a href="shop.html">SHOP</a>
 <a href="indix.html">ABOUT US</a>
-<a href="contact.html">CONTACT</a>
+<a href="maincontact.html">CONTACT</a>
    </div>
    <div class="imges">
     <img width="20px" src="pixc/Vector.png" alt="">
