--- a/shop.html
+++ b/shop.html
@@ -363,7 +363,7 @@ margin-left:-1vw;
 
 <div class="shop3">  <a href="indix.html">ABOUT US</a></div>
 <div class="shop4">
-    <a href="contact.html">CONTACT</a>
+    <a href="maincontact.html">CONTACT</a>
 </div>
 <div class="blank6"></div>
 <div class="blank8"></div>
