--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
     }
     .class img{
         margin-left: 1vw;
+        margin-top: 2vw;
     
     }
     nav {
@@ -38,7 +39,7 @@
         height:20w;
         align-items: center;
         margin-left: 100px;
-        margin-top: 1vw;
+        margin-top: 1px;
         margin-left: 15vw;
          
     }
@@ -82,31 +83,126 @@ font-size: 22px;
     font-size: 19px;
 }
 .shop{
-    margin-left: 50vw;
+    margin-left: 40vw;
     margin-top: -35vw;
     font-size: 20PX;
     color: #000;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .shop2{
-    margin-left: 55.30vw;
+    margin-left: 46.30vw;
     margin-top: -1.70vw;
     font-size: 20PX;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .shop3{
-    margin-left: 60vw;
+    margin-left: 52vw;
     font-size: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: -1.70vw;
 }
 .shop4{
-    margin-left: 67.50vw;
+    margin-left: 60.10vw;
     margin-top:;
     font-size: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: -1.75vw;
 }
+.img7{
+    margin-left: 8vw;
+    margin-top: -1.70vw;
+    display: flex;
+    gap: 20px;
+}
+.sep{
+    width: 1000px;
+    height: 2px;
+    background-color: dimgrey;
+    margin-top: 35vw;
+    margin-left: -45VW;
+}
+
+
+.fun{
+  margin-left: -45vw;
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-top: 2vw;
+}
+.link{
+  margin-left: -20vw;
+  margin-top: -3.60vw;
+  font-size: 20px;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #9F9F9F;
+}
+.help{
+  margin-left: -10vw;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-top: -1.60vw;
+  font-size: 20px;
+  color: #9F9F9F;
+}
+.new2{
+  margin-left: 2vw;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  margin-top: -1.67vw;
+  color: #9F9F9F;
+}
+.uni{
+  margin-left: -45vw;
+  margin-top: 2vw;
+  font-size: 20px;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+color:#9F9F9F;
+}
+.fl{
+  margin-left: -45vw;
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #9F9F9F;
+  margin-top: 2vw;
+}
+.home ul li{
+  margin-left: -22vw;
+  margin-top: -2.80vw;
+  color: black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  gap: 20px;
+}
+.game h1{
+margin-left: -10vw;
+font-size: 17px;
+margin-top: -6vw;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.return h1{
+    margin-left: -10vw;
+    font-size: 19px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.privacy h1{
+    margin-left:-10vw ;
+    font-size: 19px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.email{
+    margin-left: 1.60vw;
+    margin-top: -7vw;
+    color: #9F9F9F;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+}
+.sep1{
+     height: 1px;
+  width: 15vw;
+  background-color: black;
+  margin-top: 1px;
+  margin-left: 1.60vw;
+}
+
   </style>
    <div class="border">
     <header>
@@ -142,5 +238,55 @@ font-size: 22px;
 <div class="shop3">  <a href="indix.html">ABOUT US</a></div>
 <div class="shop4">
     <a href="maincontact.html">CONTACT</a>
+    <div class="img7">
+        <img src="pixc/Vector.png" alt="">
+        <img src="pixc/Vector (1).png" alt="">
+        <img src="pixc/Vector (3).png" alt="">
+        <img src="pixc/ant-design_shopping-cart-outlined (1).png" alt="">
+    </div>
+    <div class="sep"></div>
+
+
+      <div class="fun">
+    <h2>Funiro.</h2>
+</div>
+<div class="link">
+    Links
+</div>
+<div class="help">
+    Help
+</div>
+<div class="new2">
+    Newslester
+</div>
+<div class="uni">
+    400 University Drives Sutes.
+</div>
+<div class="fl">
+    FL.33134 USA
+</div>
+<div  class="home">
+    <b>
+    <ul>
+        <li>Contact</li>
+        <li>About</li>
+        <li>Shop</li>
+        <li>Home</li>
+        </ul>
+        </b>
+</div>
+<div class="game">
+    <h1>Payment Option</h1>
+</div>
+<div class="return">
+   <h1>Return</h1> 
+</div>
+<div class="privacy">
+    <h1>Privacy Policies</h1>
+</div>
+<div class="email">
+    Enter Your Email Adress
+</div>
+<div class="sep1">
 </body>
 </html>
