--- a/contact.html
+++ b/contact.html
@@ -185,20 +185,20 @@ margin-left: 10.60vw;
 .baln{
     width: 200px;
     height: 325px;
-    background-color: #9F9F9F;
+    background-color: #c5c1c1;
     margin-left: 20vw;
 }
 .baln2{
  width: 200px;
     height: 320px;
-    background-color: #9F9F9F;
+    background-color:#c5c1c1;
     margin-left: 36.75vw;
     margin-top: -20.50vw;
 }
 .baln3{
      width: 200px;
     height: 320px;
-    background-color: #9F9F9F;
+    background-color:#c5c1c1;
     margin-left: 53.55vw;
     margin-top: -20.50vw;
 }.image{
