--- a/indix.html
+++ b/indix.html
@@ -7,6 +7,36 @@
     <title>ABOUT US</title>
 </head>
 <body>
+    <div class="img2">
+        <img src="pixc/funro.png" alt="">
+    </div>
+        <div class="shop1">
+  <a href="home.html"> HOME</a>
+    </div>
+
+    <div class="shop22">  <a href="shop.html">SHOP</a></div>
+
+<div class="shop3">  <a href="indix.html">ABOUT US</a></div>
+<div class="shop4">
+    <a href="maincontact.html">CONTACT</a>
+</div>
+<div class="img10">
+    <img width="800px" src="pixc/reac10.png" alt="">
+</div>
+<div class="img20">
+    <img src="pixc/Vector.png" alt="">
+</div>
+<div class="hides">
+<img  src="pixc/Vector (1).png" alt="">
+    <img  src="pixc/Vector (3).png" alt="">
+     <img  src="pixc/ant-design_shopping-cart-outlined (1).png" alt="">
+     </div>
+     <div class="home2">
+      HOME > 
+     </div>
+     <div class="home4">
+        ABOUT US
+     </div>
     <div class="bro">
         <h2>Browse The Range</h2>
     </div>
